Förstasidan klar, Börjat på de två lagsidorna

--- a/Twopart.HTML
+++ b/Twopart.HTML
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Document</title>
+        <link href="Twopart.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <a class="column" href="Ironteam.HTML">
+            <img src="Background-Iron.jpg" alt="marvelbackground" class="background">
+        </a>
+        <a class="column" href="Capteam.HTML">
+                <img src="Background-Cap.jpg" alt="marvelbackground" class="background">
+        </a>
+    </body>
 </html>
