Klar med layout för de flesta sidor

--- a/Ironteam.HTML
+++ b/Ironteam.HTML
@@ -1,12 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link href="Regular.CSS" rel="stylesheet" type="text/css">
+        <title>Document</title>
+    </head>
+    <body>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#">Home</a>
+                </li>
+                <li>
+                    <a href="#">Home</a>
+                </li>
+                <li>
+                    <a href="#">Home</a>
+                </li>
+                <li class="dropdown">
+                    <a href="#">Dropdown</a>
+                    <div class="dropdown-content">
+                        <ul>
+                            <li>
+                                <a href="#">Content</a>
+                            </li>
+                            <li>
+                                <a href="#">Content</a>
+                            </li>
+                            <li>
+                                <a href="#">Content</a>
+                            </li>
+                        </ul>
+                    </div>
+                </li>
+                <li class="switchteam">
+                    <a href="Capteam.HTML">Switch team</a>
+                </li>
+            </ul>
+        </nav>
+        <div class="left">
+            <p>Left</p>
+        </div>
+        <div class="right">
+            <p>Right</p>
+        </div>
+        <footer>
+
+        </footer>
+    </body>
 </html>
