Allting är skrivet, saknas kommentarer

--- a/Capteam.HTML
+++ b/Capteam.HTML
@@ -5,32 +5,35 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link href="Regular.CSS" rel="stylesheet" type="text/css">
-        <title>Document</title>
+        <title>Capteam</title>
     </head>
     <body>
         <nav>
             <ul>
                 <li>
-                    <a href="#">Home</a>
-                </li>
-                <li>
-                    <a href="#">Home</a>
-                </li>
-                <li>
-                    <a href="#">Home</a>
+                    <a href="Capteam.HTML">Team</a>
                 </li>
                 <li class="dropdown">
-                    <a href="#">Dropdown</a>
+                    <a href="#">List</a>
                     <div class="dropdown-content">
                         <ul>
                             <li>
-                                <a href="#">Content</a>
+                                <a class="smallestfont" href="CaptainAmerica.HTML">Captain America</a>
                             </li>
                             <li>
-                                <a href="#">Content</a>
+                                <a href="Hawkeye.HTML">Hawkeye</a>
                             </li>
                             <li>
-                                <a href="#">Content</a>
+                                <a href="Falcon.HTML">Falcon</a>
+                            </li>
+                            <li>
+                                <a class="smallerfont" href="ScarletWitch.HTML">Scarlet Witch</a>
+                            </li>
+                            <li>
+                                <a class="smallerfont" href="WinterSoldier.HTML">Winter Soldier</a>
+                            </li>
+                            <li>
+                                <a href="Ant-Man.HTML">Ant-Man</a>
                             </li>
                         </ul>
                     </div>
@@ -40,14 +43,85 @@
                 </li>
             </ul>
         </nav>
-        <div class="left">
-            <p>Left</p>
+        <div class="leftcolumn">
+            <h1 class="marginleft">Captain America's Team</h1>
+            <p class="marginleft">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic voluptatem vitae eveniet quasi reiciendis quod natus laudantium modi iure laborum vel, voluptatibus dignissimos ipsam aut laboriosam rem facere magni quibusdam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque laborum vero ipsa illo, ut delectus nemo molestiae sapiente dolores amet ullam magni qui quod odit similique molestias deserunt. Libero, est?</p>
+            <p class="marginleft">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta laboriosam quae deserunt vel exercitationem. Asperiores velit nulla ex laborum exercitationem odio? Alias hic sint laudantium neque cum explicabo tempore dolor. Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, deserunt? Quod voluptates suscipit repellat ipsa dolores odit accusamus similique saepe inventore cumque recusandae optio, quasi quisquam? Laborum unde quod expedita.</p>
+            <br>
+            <img class="textpic" alt="Captain America Team running" src="Cap-team.jpg">
+            <table class="marginleft">
+                <thead>
+                    <tr>
+                        <th>Superhero Name</th>
+                        <th>Real name</th>
+                        <th>First movie</th>
+                        <th>Actor</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td><a href="CaptainAmerica.HTML">Captain America</a></td>
+                        <td>Steve Rogers</td>
+                        <td>Captain America: The First Avenger</td>
+                        <td>Chris Evans</td>
+                    </tr>
+                    <tr>
+                        <td><a href="Hawkeye.HTML">Hawkeye</a></td>
+                        <td>Clint Barton</td>
+                        <td>Thor</td>
+                        <td>Jeremy Renner</td>
+                    </tr>
+                    <tr>
+                        <td><a href="Falcon.HTML">Falcon</a></td>
+                        <td>Sam Wilson</td>
+                        <td>Captain America: The Winter Soldier</td>
+                        <td>Anthony Mackie</td>
+                    </tr>
+                    <tr>
+                        <td><a href="ScarletWitch.HTML">Scarlet Witch</a></td>
+                        <td>Wanda Maximoff</td>
+                        <td>Avengers: Age of Ultron</td>
+                        <td>Elizabeth Olsen</td>
+                    </tr>
+                    <tr>
+                        <td><a href="WinterSoldier.HTML">Winter Soldier</a></td>
+                        <td>Bucky Barnes</td>
+                        <td>Captain America: The First Avenger</td>
+                        <td>Sebastian Stan</td>
+                    </tr>
+                    <tr>
+                        <td><a href="Ant-Man.HTML">Ant-Man</a></td>
+                        <td>Scott Lang</td>
+                        <td>Ant-Man</td>
+                        <td>Paul Rudd</td>
+                    </tr>
+                </tbody>
+            </table>
+            <h3 class="marginleft">Strongest On the Team In Order</h3>
+            <ol class="bottommargin">
+                <li>Scarlet Witch</li>
+                <li>Captain America</li>
+                <li>Ant-Man</li>
+                <li>Winter Soldier</li>
+                <li>Hawkeye</li>
+                <li>Falcon</li>
+            </ol>
+            <p class="bottommargin"></p>
         </div>
-        <div class="right">
-            <p>Right</p>
+        <div class="rightcolumn capcolor">
+            <h1 class="center whitecolor">Captain America's Team</h1>
+            <img class="profilepic" alt="Captain America Team" src="https://cdn3.movieweb.com/i/article/CSCKVZFBJtqYGGyGSoyv5GQS2xVwMA/798:50/Captain-America-Civil-War-Iron-Man-Teams.jpg">
+            <h4 class="whitecolor">Members:</h4>
+            <p class="righthand"> <a href="CaptainAmerica.HTML">Captain America</a></p>
+            <p class="righthand"> <a href="Hawkeye.HTML">Hawkeye</a></p>
+            <p class="righthand"> <a href="Falcon.HTML">Falcon</a></p>
+            <p class="righthand"> <a href="ScarletWitch.HTML">Scarlet Witch</a></p>
+            <p class="righthand"> <a href="WinterSoldier.HTML">Winter Soldier</a></p>
+            <p class="righthand"> <a href="Ant-Man.HTML">Ant-Man</a></p>
         </div>
         <footer>
-
+                <p class="whitecolor marginleft">Posted by: Simon Pettersson</p>
+                <p class="whitecolor marginleft">Contact information: <a href="mailto:sipe00001@utb.vaxjo.se"> sipe00001@utb.vaxjo.se</a></p>
         </footer>
     </body>
 </html>
